setup FlutterFire and Route manager

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.19
   country_picker: ^2.0.20
+  firebase_core: ^2.14.0
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.8.1
+  firebase_storage: ^11.2.3
+  flutter_riverpod: ^2.0.0-dev.9
 
 flutter_native_splash: 
   color: "#FFFFFF"
