build custom image picker page -- menit ke 14.00

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cloud_firestore: ^4.8.1
   firebase_storage: ^11.2.3
   flutter_riverpod: ^2.0.0-dev.9
+  image_picker: ^0.8.5+3
+  photo_manager: ^2.3.0
+
 
 flutter_native_splash: 
   color: "#FFFFFF"
